kustomize-tea/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tea-argo-route
spec:
  to:
    kind: Service
    name: kustomize-tea-argo
    weight: 100
  port:
    targetPort: 7800
  wildcardPolicy: None
